<resources>
    <string name="app_name">DailyJapanese</string>
    <string name="drawerOpen">Drawer has been opened</string>
    <string name="drawerClose">Drawer has been closed</string>
    <string name="all_main_kana">ALL MAIN KANA</string>
    <string name="all_dakuten_kana">ALL DAKUTEN KANA</string>
    <string name="all_combination_kana">ALL COMBINATION KANA</string>
    <string name="start_the_test">START THE TEST</string>
    <string name="return_button">Return button</string>
    <string name="placeholder_kana">あ</string>
    <string name="go_to_next_kana_button">Go to next kana button</string>
    <string name="menu_button">Menu button</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="next_word">NEXT WORD</string>
    <string name="daily_japanese">Daily Japanese</string>
    <string name="i">i</string>
    <string name="finish">FINISH</string>
</resources>