<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".MainActivity"
    >


    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/top_nav_bar"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_popup"
        android:id="@+id/menu_popup"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:visibility="gone"
        android:orientation="vertical"
        android:translationZ="10dp"
        android:gravity="center"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categories_button"
            android:text="@string/categories"
            android:backgroundTint="@color/light_grey2"
            style="@style/btn_style"
            android:textColor="@color/dark_grey"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/settings_button"
            android:backgroundTint="@color/light_grey2"
            style="@style/btn_style"
            android:textColor="@color/dark_grey"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hiragana"
            android:id="@+id/hiragana_button"
            android:backgroundTint="@color/light_grey2"
            style="@style/btn_style"
            android:textColor="@color/dark_grey"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/katakana"
            android:id="@+id/katakana_button"
            android:backgroundTint="@color/light_grey2"
            style="@style/btn_style"
            android:textColor="@color/dark_grey"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="5dp"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menu_dummy"
        android:translationZ="9dp"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/info_dummy"
        android:translationZ="9dp"
        android:visibility="gone"/>

    <include
        layout="@layout/word_view"
        android:id="@+id/word_view_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newWordButton"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Primary900"
        android:text="@string/next_word"
        android:elevation="2dp"
        android:textSize="10sp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/onPrimary"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/word_view_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wordsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newWordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>