<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_refresh_layout"
    tools:context=".KanaSelectionActivity"
    android:background="@color/surface"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/top_nav_bar"/>


            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/kana_spacingV"
                android:background="@drawable/kana_selectable_toggle_button"
                android:textColor="@color/kana_selectable_text_color"                android:id="@+id/all_main_kana_selectable"
                android:layout_marginHorizontal="30dp"
                android:layout_below="@+id/top_nav_bar"
                android:textOn="@string/all_main_kana"
                android:textOff="@string/all_main_kana"/>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:id="@+id/main_kana_recycler"
                android:layout_below="@+id/all_main_kana_selectable"
                />



            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/kana_selectable_toggle_button"
                android:textColor="@color/kana_selectable_text_color"                android:id="@+id/all_dakuten_kana_selectable"
                android:layout_marginHorizontal="30dp"
                android:layout_below="@+id/main_kana_recycler"
                android:textOn="@string/all_dakuten_kana"
                android:textOff="@string/all_dakuten_kana"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dakuten_kana_recycler"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/all_dakuten_kana_selectable"
                />

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/kana_selectable_toggle_button"
                android:textColor="@color/kana_selectable_text_color"
                android:id="@+id/all_combination_kana_selectable"
                android:layout_marginHorizontal="30dp"
                android:layout_below="@+id/dakuten_kana_recycler"
                android:textOn="@string/all_combination_kana"
                android:textOff="@string/all_combination_kana"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/combination_kana_recycler"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/all_combination_kana_selectable"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:id="@+id/start_test_button"
                android:backgroundTint="@color/Primary900"
                android:layout_below="@+id/combination_kana_recycler"
                android:layout_centerHorizontal="true"
                android:text="@string/start_the_test"
                android:textColor="@color/onPrimary"
                app:cornerRadius="10dp"
                android:layout_marginBottom="@dimen/kana_spacingV"
                />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>